# soup-bot

./: .gitignore  README.md  asdf.sql  bot.py  bot_command.py  command_handler.py  command_management.py  commands.py  database_handler.py  dec_cmd_handler.py  file_handler.py  general_commands.py  main.py  pyproject.toml  setup.py  soup_bot_client.py  soupbot_utilities.py  stopwatch_commands.py  tagger.py  time_commands.py  vc_commands.py
command_blocks/: __init__.py  general_commands.py  music.py  music_support.py  time_commands.py  timer.py  vc_commands.py
command_categories/: __init__.py  general_commands.py  time_commands.py  vc_commands.py
command_lists/: __init__.py  _azure_translator.py  _lavalink_voice_protocol.py  _music_support.py  _ui_views.py  general.py  help.py  music.py  steam.py  timer.py  translator.py
command_management/: __init__.py  command_handler.py  commands.py  context.py
commands/: __init__.py  command_utilities.py  general_commands.py  time_commands.py  vc_commands.py
database/: database_handler.py
database/database_management/: __init__.py  _soup_sql.py  db_cooldowns.py  db_guilds.py  db_movies.py  db_setup.py  db_steam_apps.py  (+2 more)
handlers/: __init__.py  command_handler.py  database_handler.py
rec/: fortunes.txt
resources/: azure_translation_key.json  deepl_translation_key.json  word_list.txt
soup_commands/: Context.py  __init__.py  command_utilities.py  general_commands.py  time_commands.py  vc_commands.py
soup_util/: __init__.py  constants.py  soup_logging.py
soupbot_util/: constants.py  logger.py
src/: word_list.txt
