[project]
name = "soupbot"
version = "1.0.0"
description = "A multifunctional discord bot."
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "async-timeout>=5.0.1",
    "deepl>=1.22.0",
    "discord>=2.3.2",
    "discord-py[voice]>=2.5.2",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.175.0",
    "pynacl>=1.5.0",
    "pytube>=15.0.0",
    "requests>=2.32.4",
    "spotipy>=2.25.1",
    "yt-dlp>=2025.9.26",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/Rapptz/discord.py.git" }
