[project]
name = "soupbot"
version = "1.1.2"
description = "A multifunctional discord bot."
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "deepl>=1.22.0",
    "discord>=2.3.2",
    "discord-py[voice]>=2.5.2",
    "dotenv>=0.9.9",
    "pynacl>=1.5.0",
    "requests>=2.32.4",
    "lavalink>=5.9.0",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/Rapptz/discord.py.git" }
